Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Php-silex-template by herrera-io</title>
+    <title>Silex Template by herrera-io</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Php-silex-template</h1>
+        <h1>Silex Template</h1>
         <p>A Silex service provider for Template.</p>
 
         <p class="view"><a href="https://github.com/herrera-io/php-silex-template">View the Project on GitHub <small>herrera-io/php-silex-template</small></a></p>
